--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is login app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -17,5 +17,9 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
